# FX-Pulse

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  scrape.yml
api/: .gitignore  pyproject.toml
api/scripts/: compare_jcb_april.py  notify_discord.py  validate_jcb_crossrate.py
api/src/fx_pulse/: cli.py  config.py  main.py
api/src/fx_pulse/models/: rate.py
api/src/fx_pulse/routers/: rates.py
api/src/fx_pulse/scraper/: base.py  jcb.py  mastercard.py  visa.py
api/src/fx_pulse/store/: __init__.py  base.py  factory.py  json_store.py
api/tests/: test_cli.py  test_router.py  test_scraper.py  test_scraper_jcb.py  test_scraper_mastercard.py  test_store.py
logo/: fx-pulse-final.html
web/: astro.config.mjs  package-lock.json  package.json
web/public/: CNAME
web/src/data/: rates.json
web/src/pages/: index.astro
